--- a/index.html
+++ b/index.html
@@ -34395,16 +34395,16 @@
 
         ratio1.addEventListener("click", () => {
           img.setAttribute("src", "imgs/Effects/oneByOne.gif");
-          ratio1.styles.opacity = 1;
-          ratio9.styles.opacity = .8;
-          ratio16.styles.opacity = .8;
+          ratio1.style.opacity = 1;
+          ratio9.style.opacity = .8;
+          ratio16.style.opacity = .8;
         });
 
         ratio9.addEventListener("click", () => {
           img.setAttribute("src", "imgs/Effects/nineBySisteen.gif");
-          ratio9.styles.opactiy = 1;
-          ratio1.styles.opactiy = .8;
-          ratio16.styles.opactiy = .8;
+          ratio9.style.opactiy = 1;
+          ratio1.style.opactiy = .8;
+          ratio16.style.opactiy = .8;
         });
 
         ratio16.addEventListener("click", () => {
