--- a/index.html
+++ b/index.html
@@ -33672,11 +33672,7 @@
                             <div class="deliverable-media-tile__header__left">
                               <div class="player">
                                 <div class="player-image">
-                                  <img
-                                    src="https://scontent-iad3-1.xx.fbcdn.net/v/t51.2885-15/18160885_777319562435807_8930671299827597312_a.jpg?_nc_cat=109&amp;_nc_sid=86c713&amp;_nc_ohc=qsGBRS8ON9kAX8KpTwE&amp;_nc_oc=AQkCM-GWQ-iQZQcko9Iw_j_QWQ05afA60GIn3NkXEpcYrNtbmQunldkjyePWbJtAgDg&amp;_nc_ht=scontent-iad3-1.xx&amp;oh=701228ead91bb102129d25432331a5ff&amp;oe=5F7E9550"
-                                    alt="https://scontent-iad3-1.xx.fbcdn.net/v/t51.2885-15/18160885_777319562435807_8930671299827597312_a.jpg?_nc_cat=109&amp;_nc_sid=86c713&amp;_nc_ohc=qsGBRS8ON9kAX8KpTwE&amp;_nc_oc=AQkCM-GWQ-iQZQcko9Iw_j_QWQ05afA60GIn3NkXEpcYrNtbmQunldkjyePWbJtAgDg&amp;_nc_ht=scontent-iad3-1.xx&amp;oh=701228ead91bb102129d25432331a5ff&amp;oe=5F7E9550"
-                                    title=""
-                                  />
+                                  <img src="imgs/pp.png" title="" />
                                 </div>
                                 <div
                                   class="deliverable-media-tile__unread-count no-messages"
@@ -33684,7 +33680,7 @@
                               </div>
                               <div class="player-name">
                                 <div class="player-name__inner">
-                                  <span>hard__to__concentrate</span
+                                  <span>_ashlee_white_</span
                                   ><svg
                                     viewBox="0 0 16 16"
                                     aria-hidden="true"
@@ -33780,7 +33776,6 @@
                             z-index: 99;
                             background: white;
                             border-radius: 3px;
-                            padding: 8px;
                             margin: auto;
                             display: none;
                           "
@@ -33810,7 +33805,12 @@
                                 font-size: 18px;
                                 z-index: 99;
                               "
-                              >Create Ad</a
+                            >
+                              <img
+                                src="imgs/Icons/wand.svg"
+                                style="margin-right: 11px"
+                              />
+                              Create Ad</a
                             >
 
                             <div
@@ -33884,13 +33884,23 @@
 
                             <img
                               id="champers"
-                              style="width: 467px; position: absolute"
+                              style="
+                                width: 467px;
+                                position: absolute;
+                                height: 100%;
+                              "
                               src="imgs/OG.jpg"
                               class="show"
                             />
                           </div>
 
-                          <div style="width: 400px; padding-left: 23px">
+                          <div
+                            style="
+                              width: 400px;
+                              padding-left: 23px;
+                              padding-top: 40px;
+                            "
+                          >
                             <div
                               style="
                                 display: flex;
@@ -33910,10 +33920,7 @@
                                   overflow: hidden;
                                 "
                               >
-                                <img
-                                  src="https://scontent-iad3-1.xx.fbcdn.net/v/t51.2885-15/18160885_777319562435807_8930671299827597312_a.jpg?_nc_cat=109&amp;_nc_sid=86c713&amp;_nc_ohc=qsGBRS8ON9kAX8KpTwE&amp;_nc_oc=AQkCM-GWQ-iQZQcko9Iw_j_QWQ05afA60GIn3NkXEpcYrNtbmQunldkjyePWbJtAgDg&amp;_nc_ht=scontent-iad3-1.xx&amp;oh=701228ead91bb102129d25432331a5ff&amp;oe=5F7E9550"
-                                  alt="https://scontent-iad3-1.xx.fbcdn.net/v/t51.2885-15/18160885_777319562435807_8930671299827597312_a.jpg?_nc_cat=109&amp;_nc_sid=86c713&amp;_nc_ohc=qsGBRS8ON9kAX8KpTwE&amp;_nc_oc=AQkCM-GWQ-iQZQcko9Iw_j_QWQ05afA60GIn3NkXEpcYrNtbmQunldkjyePWbJtAgDg&amp;_nc_ht=scontent-iad3-1.xx&amp;oh=701228ead91bb102129d25432331a5ff&amp;oe=5F7E9550"
-                                />
+                                <img src="imgs/pp.png" />
                               </span>
                               _ashlee_white_
                             </div>
@@ -33921,35 +33928,82 @@
                             <div>
                               <p>Caption</p>
 
-                              <p>
-                                Lorem ipsum dolor sit amet, consectetur
-                                adipiscing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua.
-                                Cursus sit amet dictum sit. Diam quam nulla
-                                porttitor massa. Lacinia at quis risus sed
-                                vulputate odio ut enim blandit. Non enim
-                                praesent elementum facilisis leo vel fringilla
-                                est ullamcorper. Mattis molestie a iaculis at
-                                erat pellentesque adipiscing commodo. Urna
-                                porttitor rhoncus dolor purus non. Magna etiam
-                                tempor orci eu lobortis elementum nibh. Placerat
-                                in egestas erat imperdiet. Praesent tristique
-                                magna sit amet purus. Ut consequat semper
-                                viverra nam libero justo laoreet sit. Eget
-                                gravida cum sociis natoque penatibus et magnis.
+                              <p style="margin-bottom: 30px">
+                                Spring is here! 🌼 The season that wakes up our
+                                senses and brings freshness and vitality. To
+                                celebrate I’ll be sipping the new Nature’s Craft
+                                by @jacobscreekwine This great tasting Organic
+                                wine is crafted using the best organically grown
+                                grapes and boasts a natural complexity that is
+                                full of character 🥂✨ The Nature’s Craft range
+                                is exclusively available in Liquorland & First
+                                Choice #jacobscreek #naturescraft #organic
                               </p>
 
                               <p>Insights:</p>
                               <div>
                                 <div>
-                                  <div style="display: inline-block">
+                                  <div
+                                    style="
+                                      display: inline-block;
+                                      font-weight: bold;
+                                      margin-right: 16px;
+                                      margin-bottom: 20px;
+                                    "
+                                  >
                                     😍 328
                                   </div>
-                                  <div style="display: inline-block">
-                                    😍 328
+                                  <div
+                                    style="
+                                      display: inline-block;
+                                      font-weight: bold;
+                                      margin-right: 16px;
+                                      margin-bottom: 20px;
+                                    "
+                                  >
+                                    💬 84
                                   </div>
-                                  <div style="display: inline-block">
-                                    😍 328
+                                  <div
+                                    style="
+                                      display: inline-block;
+                                      font-weight: bold;
+                                      margin-right: 16px;
+                                      margin-bottom: 20px;
+                                    "
+                                  >
+                                    👁 5,190
+                                  </div>
+                                </div>
+                                <div>
+                                  <div
+                                    style="
+                                      display: inline-block;
+                                      font-weight: bold;
+                                      margin-right: 16px;
+                                      margin-bottom: 20px;
+                                    "
+                                  >
+                                    📣 4,496
+                                  </div>
+                                  <div
+                                    style="
+                                      display: inline-block;
+                                      font-weight: bold;
+                                      margin-right: 16px;
+                                      margin-bottom: 20px;
+                                    "
+                                  >
+                                    💾 7
+                                  </div>
+                                  <div
+                                    style="
+                                      display: inline-block;
+                                      font-weight: bold;
+                                      margin-right: 16px;
+                                      margin-bottom: 20px;
+                                    "
+                                  >
+                                    🤝 8.1%
                                   </div>
                                 </div>
                               </div>
